* API-Regeneration * Feature: simple/template based ID-Generation
