# src/app/api/models.ts
@@ -1,10 +1,16 @@
 export { CustomerIdRequest } from './models/customer-id-request';
+export { ServiceType } from './models/service-type';
 export { ServiceTypeResponse } from './models/service-type-response';
+export { ServiceOwner } from './models/service-owner';
 export { ServiceOwnerResponse } from './models/service-owner-response';
+export { ManagementDomain } from './models/management-domain';
 export { ManagementDomainResponse } from './models/management-domain-response';
+export { ServiceTemplate } from './models/service-template';
+export { ServiceTemplateResponse } from './models/service-template-response';
 export { ISIdRequest } from './models/isid-request';
 export { IdResponse } from './models/id-response';
 export { UpdateSequenceValueRequest } from './models/update-sequence-value-request';
 export { UpdateSequenceValueResponse } from './models/update-sequence-value-response';
 export { GetSequenceValueResponse } from './models/get-sequence-value-response';
+export { Sequence } from './models/sequence';
 export { GetSequencesResponse } from './models/get-sequences-response';
