# src/app/api/models/service-owner.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface ServiceOwner {
+  name: string;
+  id?: string;
+}
