# src/app/api/models/service-template.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+export interface ServiceTemplate {
+  name: string;
+  id?: string;
+  type?: 'IS' | 'CF';
+  template?: {serviceOwner?: string, serviceType?: string, md?: string};
+}
