# src/app/api/models/service-type.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+export interface ServiceType {
+  name: string;
+  id?: string;
+  sequenceKey?: string;
+  type?: string;
+  prefixTemplate?: string;
+}
