# swagger/id-generator.json
@@ -1,429 +1,1 @@
-{
-	"info": {
-		"title": "Service-ID Generator",
-		"version": "1.0.0",
-		"description": "Endpoints for Service-ID Generation"
-	},
-	"host": "id-generator.dev.witcom.services",
-	"basePath": "/",
-	"securityDefinitions": {
-		"bearerAuth": {
-			"type": "apiKey",
-			"name": "Authorization",
-			"scheme": "bearer",
-			"bearerFormat": "JWT",
-			"in": "header"
-		}
-	},
-	"swagger": "2.0",
-	"paths": {
-		"/api/v1/cf-service": {
-			"post": {
-				"tags": ["Generator"],
-				"name": "Generate Service-IDs",
-				"summary": "Generates customer-facing Service-IDs for a specified service-type",
-				"operationId": "Generator::generateCFId::V1",
-				"security": [{
-					"bearerAuth": []
-				}],
-				"consumes": ["application/json"],
-				"produces": ["application/json"],
-				"parameters": [{
-					"name": "body",
-					"in": "body",
-					"schema": {
-						"$ref": "#/definitions/CustomerIdRequest",
-						"type": "object",
-						"properties": {
-							"serviceType": {
-								"type": "string"
-							},
-							"count": {
-								"type": "integer"
-							}
-						}
-					},
-					"required": ["serviceType"]
-				}],
-				"responses": {
-					"200": {
-						"description": "Service-IDs generated",
-						"schema": {
-							"$ref": "#/definitions/IdResponse"
-						}
-					},
-					"400": {
-						"description": "Service-ID could not be created"
-					}
-				}
-			}
-		},
-		"/api/v1/is-service-type": {
-			"get": {
-				"tags": ["Helper"],
-				"name": "Get Infrastructure Service-Types",
-				"summary": "Get available Infrastructure Service-Types",
-				"security": [{
-					"bearerAuth": []
-				}],
-				"consumes": ["application/json"],
-				"produces": ["application/json"],
-				"responses": {
-					"200": {
-						"description": "List of infrastructure service-types",
-						"schema": {
-							"$ref": "#/definitions/serviceTypeResponse"
-						}
-					},
-					"400": {
-						"description": "List of infrastructure service-types could not be retrieved"
-					}
-				}
-			}
-		},
-		"/api/v1/cf-service-type": {
-			"get": {
-				"tags": ["Helper"],
-				"name": "Get customer-facing Service-Types",
-				"summary": "Get available customer-facing Service-Types",
-				"security": [{
-					"bearerAuth": []
-				}],
-				"consumes": ["application/json"],
-				"produces": ["application/json"],
-				"responses": {
-					"200": {
-						"description": "List of customer-facing service-types",
-						"schema": {
-							"$ref": "#/definitions/serviceTypeResponse"
-						}
-					},
-					"400": {
-						"description": "List of customer-facing service-types could not be retrieved"
-					}
-				}
-			}
-		},
-		"/api/v1/service-owner": {
-			"get": {
-				"tags": ["Helper"],
-				"name": "Get service-owners",
-				"summary": "Get available service-owners for IS-Services",
-				"security": [{
-					"bearerAuth": []
-				}],
-				"consumes": ["application/json"],
-				"produces": ["application/json"],
-				"responses": {
-					"200": {
-						"description": "List of service-owners",
-						"schema": {
-							"$ref": "#/definitions/serviceOwnerResponse"
-						}
-					},
-					"400": {
-						"description": "List of service-owners could not be retrieved"
-					}
-				}
-			}
-		},
-		"/api/v1/management-domain": {
-			"get": {
-				"tags": ["Helper"],
-				"name": "Get management-domains",
-				"summary": "Get available management-domains for IS-Services",
-				"security": [{
-					"bearerAuth": []
-				}],
-				"consumes": ["application/json"],
-				"produces": ["application/json"],
-				"responses": {
-					"200": {
-						"description": "List of management-domains",
-						"schema": {
-							"$ref": "#/definitions/managementDomainResponse"
-						}
-					},
-					"400": {
-						"description": "List of management-domains could not be retrieved"
-					}
-				}
-			}
-		},
-		"/api/v1/is-service": {
-			"post": {
-				"tags": ["Generator"],
-				"name": "Generate Infrastructure Service-IDs",
-				"summary": "Generates Infrastrukture Service-IDs for a specified service-type",
-				"security": [{
-					"bearerAuth": []
-				}],
-				"consumes": ["application/json"],
-				"produces": ["application/json"],
-				"parameters": [{
-					"name": "body",
-					"in": "body",
-					"schema": {
-						"$ref": "#/definitions/ISIdRequest",
-						"type": "object",
-						"properties": {
-							"serviceOwner": {
-								"type": "string"
-							},
-							"serviceType": {
-								"type": "string"
-							},
-							"md": {
-								"type": "string"
-							},
-							"count": {
-								"type": "integer"
-							}
-						}
-					},
-					"required": ["serviceOwner", "serviceType", "md"]
-				}],
-				"responses": {
-					"200": {
-						"description": "User info updated",
-						"schema": {
-							"$ref": "#/definitions/IdResponse"
-						}
-					},
-					"400": {
-						"description": "Service-ID could not be created"
-					}
-				}
-			}
-		},
-		"/api/v1/sequences/{key}": {
-			"put": {
-				"tags": ["Sequence"],
-				"name": "Set sequnce to a new value",
-				"summary": "Sets sequence to an new value",
-				"security": [{
-					"bearerAuth": []
-				}],
-				"consumes": ["application/json"],
-				"produces": ["application/json"],
-				"parameters": [{
-					"name": "key",
-					"in": "path",
-					"required": true,
-					"schema": {
-						"type": "string"
-					}
-				}, {
-					"name": "body",
-					"in": "body",
-					"schema": {
-						"$ref": "#/definitions/UpdateSequenceValueRequest"
-					}
-				}],
-				"responses": {
-					"200": {
-						"description": "Sequence value updated",
-						"schema": {
-							"$ref": "#/definitions/UpdateSequenceValueResponse"
-						}
-					},
-					"400": {
-						"description": "Sequence-Id could not be updated"
-					}
-				}
-			},
-			"get": {
-				"tags": ["Sequence"],
-				"name": "Get sequence value",
-				"summary": "Get sequence value",
-				"security": [{
-					"bearerAuth": []
-				}],
-				"consumes": ["application/json"],
-				"produces": ["application/json"],
-				"parameters": [{
-					"name": "key",
-					"in": "path",
-					"required": true,
-					"schema": {
-						"type": "string"
-					}
-				}],
-				"responses": {
-					"200": {
-						"description": "Sequence value",
-						"schema": {
-							"$ref": "#/definitions/GetSequenceValueResponse"
-						}
-					},
-					"400": {
-						"description": "Sequence-Id could not be retrieved"
-					}
-				}
-			}
-		},
-		"/api/v1/sequences": {
-			"get": {
-				"tags": ["Sequence"],
-				"name": "Get all sequence definitions",
-				"summary": "Get all sequence definitions",
-				"security": [{
-					"bearerAuth": []
-				}],
-				"consumes": ["application/json"],
-				"produces": ["application/json"],
-				"responses": {
-					"200": {
-						"description": "Sequence value",
-						"schema": {
-							"$ref": "#/definitions/GetSequencesResponse"
-						}
-					},
-					"400": {
-						"description": "List of sequences could not be retrieved"
-					}
-				}
-			}
-		}
-	},
-	"definitions": {
-		"CustomerIdRequest": {
-			"type": "object",
-			"properties": {
-				"serviceType": {
-					"type": "string"
-				},
-				"count": {
-					"type": "integer"
-				},
-				"required": ["serviceType"]
-			}
-		},
-		"serviceTypeResponse": {
-			"type": "array",
-			"items": {
-				"type": "object",
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"id": {
-						"type": "string"
-					},
-					"sequenceKey": {
-						"type": "string*"
-					},
-					"type": {
-						"type": "string"
-					},
-					"prefixTemplate": {
-						"type": "string"
-					}
-				}
-			}
-		},
-		"serviceOwnerResponse": {
-			"type": "array",
-			"items": {
-				"type": "object",
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"id": {
-						"type": "string"
-					}
-				}
-			}
-		},
-		"managementDomainResponse": {
-			"type": "array",
-			"items": {
-				"type": "object",
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"id": {
-						"type": "string"
-					}
-				}
-			}
-		},
-		"ISIdRequest": {
-			"type": "object",
-			"properties": {
-				"serviceOwner": {
-					"type": "string"
-				},
-				"serviceType": {
-					"type": "string"
-				},
-				"md": {
-					"type": "string"
-				},
-				"count": {
-					"type": "integer"
-				},
-				"required": ["serviceOwner", "serviceType", "md"]
-			}
-		},
-		"IdResponse": {
-			"type": "object",
-			"properties": {
-				"successful": {
-					"type": "boolean"
-				},
-				"serviceIds": {
-					"type": "array",
-					"items": {
-						"type": "string"
-					}
-				}
-			}
-		},
-		"UpdateSequenceValueRequest": {
-			"type": "object",
-			"properties": {
-				"newVal": {
-					"type": "integer",
-					"minimum": 1
-				},
-				"required": ["newVal"]
-			}
-		},
-		"UpdateSequenceValueResponse": {
-			"type": "object",
-			"properties": {
-				"successful": {
-					"type": "boolean"
-				}
-			}
-		},
-		"GetSequenceValueResponse": {
-			"type": "object",
-			"properties": {
-				"successful": {
-					"type": "boolean"
-				},
-				"value": {
-					"type": "integer"
-				}
-			}
-		},
-		"GetSequencesResponse": {
-			"type": "array",
-			"items": {
-				"type": "object",
-				"properties": {
-					"key": {
-						"type": "string"
-					}
-				}
-			}
-		}
-	},
-	"responses": {},
-	"parameters": {},
-	"tags": []
-}
+{"info":{"title":"Service-ID Generator","version":"1.1.0","description":"Endpoints for Service-ID Generation"},"host":"","basePath":"/","securityDefinitions":{"bearerAuth":{"type":"apiKey","name":"Authorization","scheme":"bearer","bearerFormat":"JWT","in":"header"}},"swagger":"2.0","paths":{"/api/v1/cf-service":{"post":{"tags":["Generator"],"description":"Generate Service-IDs","summary":"Generates customer-facing Service-IDs for a specified service-type","operationId":"generateCFServiceIds","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"parameters":[{"name":"body","in":"body","schema":{"$ref":"#/definitions/CustomerIdRequest"},"required":["serviceType"]}],"responses":{"200":{"description":"Service-IDs generated","schema":{"$ref":"#/definitions/IdResponse"}},"400":{"description":"Service-IDs could not be created"}}}},"/api/v1/is-service-type":{"get":{"tags":["Helper"],"description":"Get Infrastructure Service-Types","summary":"Get available Infrastructure Service-Types","operationId":"getIsServiceTypes","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"List of infrastructure service-types","schema":{"$ref":"#/definitions/serviceTypeResponse"}},"400":{"description":"List of infrastructure service-types could not be retrieved"}}}},"/api/v1/cf-service-type":{"get":{"tags":["Helper"],"description":"Get customer-facing Service-Types","summary":"Get available customer-facing Service-Types","operationId":"getCFServiceTypes","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"List of customer-facing service-types","schema":{"$ref":"#/definitions/serviceTypeResponse"}},"400":{"description":"List of customer-facing service-types could not be retrieved"}}}},"/api/v1/service-owner":{"get":{"tags":["Helper"],"description":"Get service-owners","summary":"Get available service-owners for IS-Services","operationId":"getServiceOwners","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"List of service-owners","schema":{"$ref":"#/definitions/serviceOwnerResponse"}},"400":{"description":"List of service-owners could not be retrieved"}}}},"/api/v1/management-domain":{"get":{"tags":["Helper"],"description":"Get management-domains","summary":"Get available management-domains for IS-Services","operationId":"getManagementDomains","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"List of management-domains","schema":{"$ref":"#/definitions/managementDomainResponse"}},"400":{"description":"List of management-domains could not be retrieved"}}}},"/api/v1/service-template":{"get":{"tags":["Helper"],"description":"Get service-templates","summary":"Get service-templates for predefines use-cases","operationId":"getServiceTemplates","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"List of service-Templates","schema":{"$ref":"#/definitions/serviceTemplateResponse"}},"400":{"description":"List of service-templates could not be retrieved"}}}},"/api/v1/is-service":{"post":{"tags":["Generator"],"description":"Generate Infrastructure Service-IDs","summary":"Generates Infrastrukture Service-IDs for a specified service-type-id","operationId":"generateISServiceIds","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"parameters":[{"name":"body","in":"body","schema":{"$ref":"#/definitions/ISIdRequest"},"required":["serviceOwner","serviceType","md"]}],"responses":{"200":{"description":"IS Service-IDs created","schema":{"$ref":"#/definitions/IdResponse"}},"400":{"description":"Service-IDs could not be created"}}}},"/api/v1/sequences":{"get":{"tags":["Sequence"],"description":"Get all sequence definitions","summary":"Get all sequence definitions","operationId":"getSequenceDefinitions","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"Sequence value","schema":{"$ref":"#/definitions/GetSequencesResponse"}},"400":{"description":"List of sequences could not be retrieved"}}}},"/api/v1/sequences/{key}":{"get":{"tags":["Sequence"],"description":"Get sequence value","operationId":"getSequenceValue","summary":"Get sequence value","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"parameters":[{"name":"key","in":"path","required":true,"schema":{"type":"string"}}],"responses":{"200":{"description":"Sequence value","schema":{"$ref":"#/definitions/GetSequenceValueResponse"}},"400":{"description":"Sequence-Id could not be retrieved"}}},"put":{"tags":["Sequence"],"description":"Set sequnce to a new value","summary":"Sets sequence to an new value","operationId":"updateSequenceValue","security":[{"bearerAuth":[]}],"consumes":["application/json"],"produces":["application/json"],"parameters":[{"name":"key","in":"path","required":true,"schema":{"type":"string"}},{"name":"body","in":"body","schema":{"$ref":"#/definitions/UpdateSequenceValueRequest"}}],"responses":{"200":{"description":"Sequence value updated","schema":{"$ref":"#/definitions/UpdateSequenceValueResponse"}},"400":{"description":"Sequence-Id could not be updated"}}}}},"definitions":{"CustomerIdRequest":{"type":"object","properties":{"serviceType":{"type":"string"},"count":{"type":"integer"},"required":["serviceType"]}},"serviceType":{"type":"object","properties":{"name":{"type":"string"},"id":{"type":"string"},"sequenceKey":{"type":"string"},"type":{"type":"string"},"prefixTemplate":{"type":"string"}},"required":["name"]},"serviceTypeResponse":{"type":"array","items":{"$ref":"#/definitions/serviceType"}},"serviceOwner":{"type":"object","properties":{"name":{"type":"string"},"id":{"type":"string"}},"required":["name"]},"serviceOwnerResponse":{"type":"array","items":{"$ref":"#/definitions/serviceOwner"}},"managementDomain":{"type":"object","properties":{"name":{"type":"string"},"id":{"type":"string"}},"required":["name"]},"managementDomainResponse":{"type":"array","items":{"$ref":"#/definitions/managementDomain"}},"serviceTemplate":{"type":"object","properties":{"name":{"type":"string"},"id":{"type":"string"},"type":{"type":"string","enum":["IS","CF"]},"template":{"type":"object","properties":{"serviceOwner":{"type":"string"},"serviceType":{"type":"string"},"md":{"type":"string"}}}},"required":["name"]},"serviceTemplateResponse":{"type":"array","items":{"$ref":"#/definitions/serviceTemplate"}},"ISIdRequest":{"type":"object","properties":{"serviceOwner":{"type":"string"},"serviceType":{"type":"string"},"md":{"type":"string"},"count":{"type":"integer"},"required":["serviceOwner","serviceType","md"]}},"IdResponse":{"type":"object","properties":{"successful":{"type":"boolean"},"serviceIds":{"type":"array","items":{"type":"string"}}}},"UpdateSequenceValueRequest":{"type":"object","properties":{"newVal":{"type":"integer","minimum":1}},"required":["newVal"]},"UpdateSequenceValueResponse":{"type":"object","properties":{"successful":{"type":"boolean"}}},"GetSequenceValueResponse":{"type":"object","properties":{"successful":{"type":"boolean"},"value":{"type":"integer"}}},"Sequence":{"type":"object","properties":{"key":{"type":"string"}}},"GetSequencesResponse":{"type":"array","items":{"$ref":"#/definitions/Sequence"}}},"responses":{},"parameters":{},"tags":[]}
